@@ -891,7 +891,7 @@ class Smarty extends Smarty_Internal_TemplateBase
     {
         $this->template_dir = array();
         foreach ((array) $template_dir as $k => $v) {
-            $this->template_dir[$k] = str_replace(array('//', '\\\\'), DS, rtrim($v, '/\\')) . DS;
+            $this->template_dir[$k] = preg_replace('#(\w+)(/|\\\\){1,}#', '$1$2', rtrim($v, '/\\')) . DS;
         }
 
         $this->joined_template_dir = join(DIRECTORY_SEPARATOR, $this->template_dir);
@@ -915,7 +915,7 @@ class Smarty extends Smarty_Internal_TemplateBase
 
         if (is_array($template_dir)) {
             foreach ($template_dir as $k => $v) {
-                $v = str_replace(array('//', '\\\\'), DS, rtrim($v, '/\\')) . DS;
+                $v = preg_replace('#(\w+)(/|\\\\){1,}#', '$1$2', rtrim($v, '/\\')) . DS;
                 if (is_int($k)) {
                     // indexes are not merged but appended
                     $this->template_dir[] = $v;
@@ -925,7 +925,7 @@ class Smarty extends Smarty_Internal_TemplateBase
                 }
             }
         } else {
-            $v = str_replace(array('//', '\\\\'), DS, rtrim($template_dir, '/\\')) . DS;
+            $v = preg_replace('#(\w+)(/|\\\\){1,}#', '$1$2', rtrim($template_dir, '/\\')) . DS;
             if ($key !== null) {
                 // override directory at specified index
                 $this->template_dir[$key] = $v;
@@ -966,7 +966,7 @@ class Smarty extends Smarty_Internal_TemplateBase
     {
         $this->config_dir = array();
         foreach ((array) $config_dir as $k => $v) {
-            $this->config_dir[$k] = str_replace(array('//', '\\\\'), DS, rtrim($v, '/\\')) . DS;
+            $this->config_dir[$k] = preg_replace('#(\w+)(/|\\\\){1,}#', '$1$2', rtrim($v, '/\\')) . DS;
         }
 
         $this->joined_config_dir = join(DIRECTORY_SEPARATOR, $this->config_dir);
@@ -989,7 +989,7 @@ class Smarty extends Smarty_Internal_TemplateBase
 
         if (is_array($config_dir)) {
             foreach ($config_dir as $k => $v) {
-                $v = str_replace(array('//', '\\\\'), DS, rtrim($v, '/\\')) . DS;
+                $v = preg_replace('#(\w+)(/|\\\\){1,}#', '$1$2', rtrim($v, '/\\')) . DS;
                 if (is_int($k)) {
                     // indexes are not merged but appended
                     $this->config_dir[] = $v;
@@ -999,7 +999,7 @@ class Smarty extends Smarty_Internal_TemplateBase
                 }
             }
         } else {
-            $v = str_replace(array('//', '\\\\'), DS, rtrim($config_dir, '/\\')) . DS;
+            $v = preg_replace('#(\w+)(/|\\\\){1,}#', '$1$2', rtrim($config_dir, '/\\')) . DS;
             if ($key !== null) {
                 // override directory at specified index
                 $this->config_dir[$key] = rtrim($v, '/\\') . DS;
